--- a/gateway-app/src/main/resources/web/gateway/appInst.html
+++ b/gateway-app/src/main/resources/web/gateway/appInst.html
@@ -5,6 +5,7 @@
     <li>Host : {{appInst.host}}</li>
     <li>Port : {{appInst.port}}</li>
     <li>Path : {{appInst.path}}</li>
+    <li>Haproxy State : {{}}</li>
     <li>In load balancers:
       <ul ng-repeat="(lb, value) in rawStatusForOneInst">
         <li><a href="#/lb/{{lb}}">{{lb}}</a></li>
