--- a/gateway-app/src/main/resources/web/gateway/gateway.html
+++ b/gateway-app/src/main/resources/web/gateway/gateway.html
@@ -1,4 +1,211 @@
+<div class="row">
 
+
+    <!-- Nav tabs -->
+    <ul class="nav nav-tabs" role="tablist">
+        <li class="active"><a href="#home" role="tab" data-toggle="tab"><span class="glyphicon glyphicon-home"></span>
+            Home</a></li>
+        <li ng-repeat="appGroup in allAppGroups">
+            <a href="#tab-{{appGroup.id}}" role="tab" data-toggle="tab">{{appGroup.name}}</a>
+        </li>
+
+
+    </ul>
+
+    <!-- Tab panes -->
+    <div class="tab-content">
+        <div class="tab-pane active" id="home">
+
+            <div class="panel panel-default">
+                <div class="panel-body">
+                    <h3>New application group</h3>
+
+                    <form role="form" ng-submit="createApplicationGroup()" name="createAppGroupForm">
+
+                        <div class="form-group">
+                            <label for="inAppGroupName">Name</label>
+                            <input type="text" ng-model="appGroup.name" class="form-control"
+                                   name="name"
+                                   required
+                                   placeholder="Enter application group name">
+                        </div>
+                        <button type="submit" class="btn btn-primary" ng-disabled="createAppGroupForm.$invalid">Create
+                        </button>
+                    </form>
+                </div>
+            </div>
+
+        </div>
+        <div class="tab-pane" id="tab-{{appGroup.id}}" ng-repeat="appGroup in allAppGroups">
+
+            <div class="panel panel-default">
+                <div class="panel-body">
+                    {{appGroup.name}} has {{appGroup.applications.length}} applications.
+                    <div class="btn-group pull-right ">
+                        <a><span ng-click="removeGroup(appGroup)" class="glyphicon glyphicon-trash"></span></a>
+                    </div>
+                </div>
+            </div>
+            <div class="panel-group" id="tab-{{appGroup.id}}-panel">
+                <div class="panel panel-success" ng-repeat="app in appGroup.applications">
+                    <div class="panel-heading">
+                        <h4 class="panel-title">
+                            <a data-toggle="collapse" data-parent="#accordion" href="#tab-{{app.id}}-panel">
+                                {{app.name}}
+                            </a>
+
+                            <div class="btn-group pull-right ">
+                                <span class="badge">{{app.applicationInstances.length}}</span>
+
+                                <a> <span ng-click="showUpdateApplication(app)"
+                                          class="glyphicon glyphicon-wrench"></span></a>
+                                <a> <span ng-click="removeApp(appGroup,app)"
+                                          class="glyphicon glyphicon-trash"></span></a>
+                            </div>
+                        </h4>
+                    </div>
+                    <div id="tab-{{app.id}}-panel" class="panel-collapse collapse ">
+                        <div class="panel-body">
+                            <div class="row">
+
+                                <!--<div class="col-md-4" ng-repeat="appInst in app.applicationInstances">
+                                    <div class="alert alert-warning" role="alert">
+                                        {{appInst.host}}:{{appInst.port}}{{appInst.path}}
+                                    </div>
+                                </div>-->
+
+                                <div class="col-md-4" ng-repeat="appInst in app.applicationInstances">
+
+
+                                    <div class="panel panel-warning">
+                                        <div class="panel-heading">
+                                            {{appInst.name}}
+                                            <div class="btn-group pull-right ">
+                                                <a>
+                                                    <span class="glyphicon glyphicon-floppy-disk"></span></a>
+
+                                                </a>
+
+                                                <a> <span ng-click="removeAppInst(app,appInst)" class="glyphicon glyphicon-trash"></span></a>
+                                            </div>
+                                        </div>
+                                        <div class="panel-body">
+                                            {{appInst.name}} at {{appInst.host}}:{{appInst.port}}{{appInst.path}}
+                                            <div click-to-edit="appInst.name"></div>
+                                        </div>
+
+                                    </div>
+
+                                </div>
+
+                                <div class="col-md-4">
+                                    <div class="panel panel-warning">
+                                        <div class="panel-heading">New application instance</div>
+                                        <div class="panel-body">
+                                            <form class="form" role="form" ng-submit="addAppInst(app)">
+                                                <div class="form-group">
+
+                                                    <input type="text" ng-model="newAppInstForm.name"
+                                                           class="form-control "
+                                                           id="inAppInstName" name="name"
+                                                           required
+                                                           placeholder="Enter name">
+                                                </div>
+                                                <div class="form-group">
+                                                    <label for="inAppInstHost">Server </label>
+                                                    <input type="text" ng-model="newAppInstForm.host"
+                                                           class="form-control "
+                                                           id="inAppInstHost" name="host"
+                                                           required
+                                                           placeholder="Enter server: i.e 'vm-stapp-145:1234/finch'">
+                                                </div>
+
+                                                <button type="submit" class="btn btn-primary"
+                                                        ng-disabled="newInstanceForm.$invalid ">Submit
+                                                </button>
+                                            </form>
+
+                                        </div>
+
+                                    </div>
+
+                                </div>
+
+                            </div>
+
+
+                        </div>
+                    </div>
+                </div>
+
+                <div class="panel panel-success">
+                    <div class="panel-heading">
+                        <h4 class="panel-title">
+                            <a data-toggle="collapse" data-parent="#tab-{{appGroup.id}}"
+                               href="#tab-{{appGroup.id}}-newApp">
+                                New application to {{appGroup.name}}
+                            </a>
+                        </h4>
+                    </div>
+                    <div id="tab-{{appGroup.id}}-newApp" class="panel-collapse collapse ">
+                        <div class="panel-body">
+                            <form role="form" ng-submit="createApplication(appGroup)" name="createAppForm" novalidate>
+
+                                <div class="form-group">
+                                    <label for="inAppName2">Name</label>
+                                    <input type="text" ng-model="newApp.name" class="form-control" id="inAppName2"
+                                           name="name"
+                                           ng-pattern="/^\S+$/"
+                                           required
+                                           placeholder="Enter application name">
+                                    <span class="bg-danger" ng-show="createAppForm.name.$error.pattern">Invalid name: Cannot contain white-spaces. Use - instead</span>
+                                </div>
+                                <div class="form-group">
+                                    <label for="inAppPublicUrl2">Public Path</label>
+                                    <input type="text" ng-model="newApp.publicUrl" class="form-control "
+                                           id="inAppPublicUrl2"
+                                           name="publicUrl"
+                                           ng-pattern="/^/[a-zA-Z]+\S*$/"
+                                           required
+                                           placeholder="Enter public url">
+                                    <span class="bg-danger" ng-show="createAppForm.publicUrl.$error.pattern">Invalid path: Must start with / followed by a letter. Cannot contain white-spaces</span>
+                                </div>
+                                <div class="form-group">
+                                    <label for="inAppEmails2">Emails (for notification). Separate by ,</label>
+                                    <input type="text" ng-model="newApp.emails" class="form-control " id="inAppEmails2"
+                                           name="emails"
+                                           required
+                                           placeholder="Enter email(s)">
+                                </div>
+                                <div class="form-group">
+                                    <label for="inAppCheckPath2">Check path</label>
+                                    <input type="text" ng-model="newApp.checkPath" class="form-control "
+                                           id="inAppCheckPath2"
+                                           name="checkpath"
+                                           ng-pattern="/^/[a-zA-Z]+\S*$/"
+                                           required
+                                           placeholder="Enter check path">
+                                    <span class="bg-danger" ng-show="createAppForm.checkpath.$error.pattern">Invalid path: Must start with / followed by a letter. Cannot contain white-spaces</span>
+                                </div>
+
+                                <button type="submit" class="btn btn-primary" ng-disabled="createAppForm.$invalid">
+                                    Create
+                                </button>
+                            </form>
+                        </div>
+
+                    </div>
+                </div>
+
+            </div>
+            <pre>{{appGroup|json}}</pre>
+
+
+        </div>
+
+
+    </div>
+</div>
 
 <div class="row">
 
@@ -81,7 +288,6 @@
     </div>
 
 
-
     <a href="" ng-model="collapsedGroup" ng-click="collapsedGroup=!collapsedGroup"><strong>Toggle
         (show/hide)</strong> json data</a>
 
@@ -132,7 +338,76 @@
 <hr>
 
 
-<!-- Modal -->
+
+
+<!-- Modal update Application app) -->
+<div class="modal fade" id="modalUpdateApp" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span
+                        class="sr-only">Close</span></button>
+                <h4 class="modal-title" id="myModalLabel">Update</h4>
+            </div>
+            <div class="modal-body">
+
+
+                <form role="form" ng-submit="updateApplication()" name="editAppForm">
+
+                    <div class="form-group"
+                         ng-class="{'has-error': editAppForm.name.$invalid && editAppForm.name.$dirty}">
+                        <label for="inAppNameUpdate">Name</label>
+                        <input type="text" ng-model="updateApp.name" class="form-control" id="inAppNameUpdate" name="name"
+                               ng-pattern="/^\S+$/" required placeholder="Enter name"/>
+                        <span class="bg-danger" ng-show="editAppForm.name.$error.pattern">Invalid name: Cannot contain white-spaces. Use - instead</span>
+                    </div>
+
+                    <div class="form-group"
+                         ng-class="{'has-error': editAppForm.publicUrl.$invalid && editAppForm.publicUrl.$dirty}">
+                        <label for="inAppPublicUrlUpdate">Public Path</label>
+                        <input type="text" ng-model="updateApp.publicUrl" class="form-control " id="inAppPublicUrlUpdate"
+                               name="publicUrl"
+                               ng-pattern="/^/[a-zA-Z]+\S*$/"
+                               required
+                               placeholder="Enter public path">
+                        <span class="bg-danger" ng-show="editAppForm.publicUrl.$error.pattern">Invalid path: Must start with / followed by a letter. Cannot contain white-spaces</span>
+                    </div>
+
+                    <div class="form-group"
+                         ng-class="{'has-error': editAppForm.emails.$invalid && editAppForm.emails.$dirty}">
+                        <label for="inAppEmailsUpdate">Emails (for notification). Separate by ,</label>
+                        <input type="text" ng-model="updateApp.emails" class="form-control " id="inAppEmailsUpdate" name="emails"
+                               required
+                               placeholder="Enter email(s)">
+                    </div>
+
+                    <div class="form-group"
+                         ng-class="{'has-error': editAppForm.checkPath.$invalid && editAppForm.checkPath.$dirty}">
+                        <label for="inAppCheckPathUpdate">Check path</label>
+                        <input type="text" ng-model="updateApp.checkPath" class="form-control " id="inAppCheckPathUpdate"
+                               name="checkPath"
+                               ng-pattern="/^/[a-zA-Z]+\S*$/"
+                               required
+                               placeholder="Enter check path">
+                        <span class="bg-danger" ng-show="editAppForm.checkPath.$error.pattern">Invalid path: Must start with / followed by a letter. Cannot contain white-spaces</span>
+                    </div>
+
+                    <button type="submit" class="btn btn-primary" ng-disabled="editAppForm.$invalid">Update</button>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+
+
+
+<!-- Modal Create app (Not used ?) -->
 <div class="modal fade bs-example-modal-lg" id="modalCreateApp" tabindex="-1" role="dialog"
      aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg">
