AppInstModel now has one field called server which previously was host+port+path. Makes frontend simpler. New GUI changes.

--- a/gateway-app/src/main/resources/web/gateway/gateway.html
+++ b/gateway-app/src/main/resources/web/gateway/gateway.html
@@ -90,8 +90,8 @@
                                             </div>
                                         </div>
                                         <div class="panel-body">
-                                            {{appInst.name}} at {{appInst.host}}:{{appInst.port}}{{appInst.path}}
-                                            <div click-to-edit="appInst.name"></div>
+
+                                            <div click-to-edit="appInst.server" callback="updateAppInst()"></div>
                                         </div>
 
                                     </div>
