--- a/gateway-app/src/main/resources/web/gateway/loadBalancer.html
+++ b/gateway-app/src/main/resources/web/gateway/loadBalancer.html
@@ -110,9 +110,10 @@
       <td>
           <div style="margin:0" ng-hide="s.data.svname  == 'FRONTEND' || s.data.svname  == 'BACKEND'">
               <select id = "{{s.data.svname}}-state2" ng-model="selectedState" ng-change = "setProxyStateWithAPI(s.data)" >
-                  <option>ready</option>
-                  <option>maint</option>
-                  <option>drain</option>
+                  <option value="ready">Ready</option>
+                  <option value="maint">Maint</option>
+                  <option value="maint">Drain</option>
+                  <option value="shutdown">Kill sessions</option>
               </select>
           </div>
       </td>
