Fixed a button that didn't work.

--- a/gateway-app/src/main/resources/web/gateway/gateway.html
+++ b/gateway-app/src/main/resources/web/gateway/gateway.html
@@ -57,7 +57,7 @@
 
                 <div class="btn-group pull-right ">
                     <span class="badge">{{app.applicationInstances.length}}</span>
-                    <button ng-href="#/app/{{app.id}}">
+                    <button go-click="/app/{{app.id}}">
                         <span class="glyphicon glyphicon-new-window"></span> Visit
                     </button>
                     <button ng-click="showUpdateApplication(app)"> <span
