--- a/gateway-app/src/main/resources/web/gateway/loadBalancer.html
+++ b/gateway-app/src/main/resources/web/gateway/loadBalancer.html
@@ -108,8 +108,9 @@
       </div>
     </td>
       <td>
-          <div style="margin:0" ng-hide="s.data.svname  == 'FRONTEND' || s.data.svname  == 'BACKEND'">
-              <select id = "{{s.data.svname}}-state2" ng-model="selectedState" ng-change = "setProxyStateWithAPI(s.data)" >
+          <div ng-hide="s.data.svname  == 'FRONTEND' || s.data.svname  == 'BACKEND'">
+              <select id = "{{s.data.svname}}-state2"  ng-change = "setProxyStateWithAPI(s.data)" >
+                  <option value=""></option>
                   <option value="ready">Ready</option>
                   <option value="maint">Maint</option>
                   <option value="maint">Drain</option>
