Test server can now respond with error codes. which can be set by users.

--- a/gateway-app/src/main/resources/web/gateway/loadBalancer.html
+++ b/gateway-app/src/main/resources/web/gateway/loadBalancer.html
@@ -109,7 +109,7 @@
     </td>
       <td>
           <div ng-hide="s.data.svname  == 'FRONTEND' || s.data.svname  == 'BACKEND'">
-              <select id = "{{s.data.svname}}-state2"  ng-change = "setProxyStateWithAPI(s.data)" >
+              <select id = "{{s.data.svname}}-state2"  ng-model="selectedState" ng-change = "setProxyStateWithAPI(s.data)" >
                   <option value=""></option>
                   <option value="ready">Ready</option>
                   <option value="maint">Maint</option>
