--- a/gateway-app/src/main/resources/web/index.html
+++ b/gateway-app/src/main/resources/web/index.html
@@ -31,30 +31,6 @@
       }
     };
 
-    function search() {
-      var search = document.getElementById("searchInput");
-      var host = "http://" + window.location.host;
-      var dropdown = document.getElementById("dropdownlist");
-
-      jQuery.ajax({
-        url: host + "/data/applications",
-        type: "GET",
-
-        contentType: 'application/json; charset=utf-8',
-        success: function (resultData) {
-
-          for (var i = 0; i < resultData.length; i++) {
-            //$("#dropdowndiv ul").appendChild("<li role = 'presentation'><a role = 'menuitem' tabindex = '-1' href = '#'>" + resultData[i].name + "</a></li>");
-          }
-        },
-        error: function (jqXHR, textStatus, errorThrown) {
-
-        },
-
-        timeout: 120000
-      });
-
-    }
   </script>
   <script src="web/bower/requirejs/require.js" data-main="web/gateway-main.js"></script>
   <link rel="stylesheet" href="web/bower/bootstrap/dist/css/bootstrap.css"/>
@@ -122,7 +98,7 @@
   <title>Gateway</title>
 </head>
 <body>
-<nav class="navbar navbar-default" role="navigation">
+<nav class="navbar navbar-default" role="navigation" ng-controller="IndexController as index">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -141,23 +117,21 @@
 
       <ul class="nav navbar-nav">
       </ul>
-      <!--<form class="navbar-form navbar-left" role="search">
+      <form class="navbar-form navbar-left" role="search">
         <div class="form-group">
 
-          <div class="dropdown" id = "dropdowndiv">
+          <div class="dropdown" id="dropdowndiv">
             <input class="btn btn-default dropdown-toggle" type="text" id="searchInput" data-toggle="dropdown"
-                   placeholder="Search"
-                   onkeypress="search()">
+                   placeholder="Search" ng-model="search" ng-change = "getData()">
+                <!--onkeypress= "search()"-->
             <span class="caret"></span>
             </input>
             <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1" id="dropdownlist">
-              <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Action</a></li>
-              <li role="presentation" class="divider"></li>
             </ul>
           </div>
         </div>
 
-      </form>-->
+      </form>
 
 
       <ul class="nav navbar-nav navbar-right">
