Push config file to remote server should now work. A public key must be added to authorized_keys on the server, and the corresponding private key must be added to a loadbalancer in GUI/DB.
- A new SshConnection class manages the SFTP transfer, and is called from the FileWriterService.
- Username is added to DB, backend, GUI and tests
- Changed input field for ssh key to textarea

--- a/gateway-app/src/main/resources/web/gateway/gateway.html
+++ b/gateway-app/src/main/resources/web/gateway/gateway.html
@@ -355,12 +355,12 @@
 
 
 <div class="row">
-    <div class="col-sm-6">
+    <div class="col-sm-7">
         <lb-form></lb-form>
     </div>
 
 
-    <div class="col-sm-6">
+    <div class="col-sm-5">
 
         <h3>Load Balancers</h3>
 
@@ -370,7 +370,7 @@
                 <b>All Load Balancers </b>
             </a>
             <a href="#/lb/{{lb.id}}" class="list-group-item" ng-repeat="lb in allLBs">
-                <b> {{lb.name}}</b> {{lb.installationPath}} {{lb.sshKey}} ({{lb.id}})
+                <b> {{lb.name}}</b> {{lb.installationPath}} ({{lb.id}})
             </a>
 
 
