--- a/gateway-app/src/main/resources/web/gateway/lbform.html
+++ b/gateway-app/src/main/resources/web/gateway/lbform.html
@@ -39,10 +39,19 @@
     </div>
     <div class="form-group">
         <label for="inLbHost">SSH Key</label>
-        <input type="text" ng-model="lb.sshKey" class="form-control " id="inLbSshKey"
+        <textarea rows="12" ng-model="lb.sshKey" class="form-control " id="inLbSshKey"
                required
-               placeholder="Enter SSH key">
+               placeholder="Enter SSH key" ></textarea>
     </div>
+
+    <div class="form-group">
+        <label for="inLbUserName">Username</label>
+        <input type="text" ng-model="lb.userName" class="form-control " id="inLbUserName"
+               name="username"
+               required
+               placeholder="Enter username">
+    </div>
+
 
 
 
