--- a/gateway-app/src/main/resources/web/gateway/loadBalancer.html
+++ b/gateway-app/src/main/resources/web/gateway/loadBalancer.html
@@ -1,125 +1,126 @@
-<h1>Load Balancer : {{lb.name}}
-  <small>({{lb.id}})</small>
-</h1>
+
 <div class="row">
-  <div class="col-sm-4">
-    <div class="panel panel-primary">
-      <!-- Default panel contents -->
-      <div class="panel-heading">{{lb.name}}
-        <a data-target="#myModal" data-toggle="modal">
-          <span class="glyphicon glyphicon-cog white pull-right"></span>
-        </a>
 
-      </div>
-      <div class="panel-body">
+    <div class="panel-group" id="accordion">
+        <div class="panel panel-success">
+            <div class="panel-heading">
+                <h4 class="panel-title">
+                    <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
+                        Load Balancer : {{lb.name}}
+                        <a data-target="#myModal" data-toggle="modal">
+                            <span class="glyphicon glyphicon-cog white pull-right"></span>
+                        </a>
+                    </a>
+                </h4>
+            </div>
+            <div id="collapseOne" class="panel-collapse collapse in">
+                <div class="panel-body">
 
-        <ul class="list-unstyled">
-          <li>InstallationPath : {{lb.installationPath}}</li>
-          <li>Host : {{lb.host}}</li>
-          <li>Port : {{lb.publicPort}}</li>
-          <li>SSH key : {{lb.sshKey}}</li>
-          <li>Number of applications : {{lb.applications.length}}</li>
-          <li>Stats page : <a href="http://{{lb.host}}:{{lb.publicPort+1}}/proxy-stats">{{lb.host}}:{{lb.publicPort+1}}/proxy-stats</a>
-          </li>
-        </ul>
+                    <ul class="list-unstyled">
+                        <li>InstallationPath : {{lb.installationPath}}</li>
+                        <li>Host : {{lb.host}}</li>
+                        <li>Port : {{lb.publicPort}}</li>
+                        <li>
+                            <a href="" ng-model="collapsedSSHkey" ng-click="collapsedSSHkey=!collapsedSSHkey"><strong>SSH
+                                key
+                            </strong> (show/hide)</a>
 
-      </div>
+                            <div ng-show="collapsedSSHkey">
+                                <pre>{{lb.sshKey}}</pre>
+                            </div>
 
-      <!-- Table -->
-      <table class="table">
+                        </li>
+                        <li>Number of applications : {{lb.applications.length}}
 
-      </table>
+
+                        </li>
+                        <li>Stats page : <a href="http://{{lb.host}}:{{lb.publicPort+1}}/proxy-stats">{{lb.host}}:{{lb.publicPort+1}}/proxy-stats</a>
+                        </li>
+                    </ul>
+
+
+                </div>
+            </div>
+        </div>
+
+
     </div>
 
-  </div>
-  <div class="col-sm-8">
 
-
-  </div>
 </div>
 
-
-<!-- Button trigger modal -->
-<button class="btn btn-info" data-toggle="modal" data-target="#myModal">
-  Edit
-</button>
-<a href="" ng-model="collapsedLBJSON" ng-click="collapsedLBJSON=!collapsedLBJSON"><strong>Toggle
-  (show/hide)</strong> json data</a>
-<div ng-show="collapsedLBJSON">
-  <pre>{{rawStatus|json}}</pre>
-</div>
 
 <hr>
 <div class="row">
-  <div class="col-sm-8">
-    <h3>Status: <span class="text-success" ng-show="isLBonline">HAproxy is running
+    <div class="col-sm-8">
+        <h3>Status: <span class="text-success" ng-show="isLBonline">HAproxy is running
             <span class="glyphicon glyphicon-thumbs-up"></span></span>
             <span class="text-danger" ng-hide="isLBonline">HAproxy is not running
             <span class="glyphicon glyphicon-thumbs-down"></span></span>
-    </h3>
+        </h3>
 
-  </div>
+    </div>
 
-  <div class="col-sm-4">
+    <div class="col-sm-4">
 
-    <a class="btn pull-right" ng-class="{true: 'btn-primary', false: 'btn-success'}[!autoRefresh]"
-       ng-click="startStopAutoRefresh()">Turn {{!autoRefresh&& 'on' || 'off'}} autorefresh</a>
+        <a class="btn pull-right" ng-class="{true: 'btn-primary', false: 'btn-success'}[!autoRefresh]"
+           ng-click="startStopAutoRefresh()">Turn {{!autoRefresh&& 'on' || 'off'}} autorefresh</a>
 
-  </div>
+    </div>
 </div>
 
 <table class="table" ng-show="isLBonline">
-  <thead>
-  <tr>
-    <th>Proxy Name</th>
-    <th>Service Name</th>
-    <th>Current Sessions</th>
-    <th>Total Sessions</th>
-    <th>Bytes in</th>
-    <th>Bytes out</th>
-    <th>Last change in status</th>
-    <th>Downtime</th>
-    <th>Status</th>
-      <th>Actions</th>
-    <th>Actions2</th>
-  </tr>
-  </thead>
+    <thead>
+    <tr>
+        <th>Proxy Name</th>
+        <th>Service Name</th>
+        <th>Current Sessions</th>
+        <th>Total Sessions</th>
+        <th>Bytes in</th>
+        <th>Bytes out</th>
+        <th>Last change in status</th>
+        <th>Downtime</th>
+        <th>Status</th>
+        <th>Actions</th>
+        <th>Actions2</th>
+    </tr>
+    </thead>
 
-  <tbody>
-  <tr ng-repeat="s in rawStatus"
-      ng-class="{OPEN:'info', UP:'success', MAINT:'warning', DOWN:'danger','':'active'}[s.data.status]">
+    <tbody>
+    <tr ng-repeat="s in rawStatus"
+        ng-class="{OPEN:'info', UP:'success', MAINT:'warning', DOWN:'danger','':'active'}[s.data.status]">
 
-    <td>{{s.data.pxname}}</td>
-    <td>{{s.data.svname}}</td>
-    <td>{{s.data.scur}}</td>
-    <td>{{s.data.stot}}</td>
-    <td>{{s.data.bin | bytes}}</td>
-    <td>{{s.data.bout| bytes}}</td>
-    <td>{{s.data.lastchg | secondstime}}</td>
-    <td>{{s.data.downtime | secondstime}}</td>
-    <td>{{s.data.status}}</td>
-    <td>
-      <div style="margin:0" ng-hide="s.data.svname  == 'FRONTEND' || s.data.svname  == 'BACKEND'">
-        <select id = "{{s.data.svname}}-state" ng-model="selectedState" ng-change = "setProxyState(s.data.svname)" >
-          <option>READY</option>
-          <option>MAINT</option>
-          <option>DRAIN</option>
-        </select>
-      </div>
-    </td>
-      <td>
-          <div ng-hide="s.data.svname  == 'FRONTEND' || s.data.svname  == 'BACKEND'">
-              <select id = "{{s.data.svname}}-state2"  ng-model="selectedState" ng-change = "setProxyStateWithAPI(s.data)" >
-                  <option value=""></option>
-                  <option value="ready">Ready</option>
-                  <option value="maint">Maint</option>
-                  <option value="maint">Drain</option>
-                  <option value="shutdown">Kill sessions</option>
-              </select>
-          </div>
-      </td>
-  </tr>
-  </tbody>
+        <td>{{s.data.pxname}}</td>
+        <td>{{s.data.svname}}</td>
+        <td>{{s.data.scur}}</td>
+        <td>{{s.data.stot}}</td>
+        <td>{{s.data.bin | bytes}}</td>
+        <td>{{s.data.bout| bytes}}</td>
+        <td>{{s.data.lastchg | secondstime}}</td>
+        <td>{{s.data.downtime | secondstime}}</td>
+        <td>{{s.data.status}}</td>
+        <td>
+            <div style="margin:0" ng-hide="s.data.svname  == 'FRONTEND' || s.data.svname  == 'BACKEND'">
+                <select id="{{s.data.svname}}-state" ng-model="selectedState" ng-change="setProxyState(s.data.svname)">
+                    <option>READY</option>
+                    <option>MAINT</option>
+                    <option>DRAIN</option>
+                </select>
+            </div>
+        </td>
+        <td>
+            <div ng-hide="s.data.svname  == 'FRONTEND' || s.data.svname  == 'BACKEND'">
+                <select id="{{s.data.svname}}-state2" ng-model="selectedState" ng-change="setProxyStateWithAPI(s.data)">
+                    <option value=""></option>
+                    <option value="ready">Ready</option>
+                    <option value="maint">Maint</option>
+                    <option value="maint">Drain</option>
+                    <option value="shutdown">Kill sessions</option>
+                </select>
+            </div>
+        </td>
+    </tr>
+    </tbody>
 </table>
 
 <!--
@@ -131,48 +132,48 @@
 
 
 <div class="row">
-  <div class="col-sm-6">
-    <h3>Application in this Load Balancer</h3>
+    <div class="col-sm-6">
+        <h3>Application in this Load Balancer</h3>
 
-    <div class="list-group">
-      <a class="list-group-item" ng-repeat="a in inLBList">
-        <b> {{a.name}}</b> {{a.publicUrl}} ({{a.id}}) GroupId: {{a.applicationGroupId}}
+        <div class="list-group">
+            <a class="list-group-item" ng-repeat="a in inLBList">
+                <b> {{a.name}}</b> {{a.publicUrl}} ({{a.id}}) GroupId: {{a.applicationGroupId}}
 
-        <button type="button" ng-click="removeAppFromLB(a.id)" class="btn btn-danger btn-sm pull-right">Remove
-        </button>
-      </a>
+                <button type="button" ng-click="removeAppFromLB(a.id)" class="btn btn-danger btn-sm pull-right">Remove
+                </button>
+            </a>
+        </div>
+
     </div>
 
-  </div>
+
+    <div class="col-sm-6">
+        <h3>Add new application (from existing applications) </h3>
+
+        <div class="list-group">
 
 
-  <div class="col-sm-6">
-    <h3>Add new application (from existing applications) </h3>
-
-    <div class="list-group">
-
-
-      <a class="list-group-item" ng-repeat="a in allLBList">
-        <b> {{a.name}}</b> {{a.publicUrl}} ({{a.id}}) GroupId: {{a.applicationGroupId}}
-        <button type="button" ng-click="addAppToLB(a.id)" class="btn btn-primary btn-sm pull-right">Add</button>
-      </a>
+            <a class="list-group-item" ng-repeat="a in allLBList">
+                <b> {{a.name}}</b> {{a.publicUrl}} ({{a.id}}) GroupId: {{a.applicationGroupId}}
+                <button type="button" ng-click="addAppToLB(a.id)" class="btn btn-primary btn-sm pull-right">Add</button>
+            </a>
+        </div>
     </div>
-  </div>
 
 </div>
 
 <hr>
 <div class="row">
 
-  <button type="button" class="btn btn-primary" ng-model="collapseConfig" ng-click="collapseConfig=!collapseConfig">
-    Show/Hide HA Proxy config file
-  </button>
+    <button type="button" class="btn btn-primary" ng-model="collapseConfig" ng-click="collapseConfig=!collapseConfig">
+        Show/Hide HA Proxy config file
+    </button>
 
-  <!--<p style="white-space: pre;">{{ configFile}}</p>-->
+    <!--<p style="white-space: pre;">{{ configFile}}</p>-->
 
-  <div ng-show="collapseConfig">
-    <pre>{{configFile}}</pre>
-  </div>
+    <div ng-show="collapseConfig">
+        <pre>{{configFile}}</pre>
+    </div>
 
 </div>
 
@@ -182,28 +183,28 @@
 
 <!-- Modal -->
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span
-            class="sr-only">Close</span></button>
-        <h4 class="modal-title" id="myModalLabel">Update</h4>
-      </div>
-      <div class="modal-body">
-        <lb-form ng-if="lbLoadingDone"></lb-form>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <!--<button type="button" class="btn btn-primary">Save changes</button>-->
-      </div>
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span
+                        class="sr-only">Close</span></button>
+                <h4 class="modal-title" id="myModalLabel">Update</h4>
+            </div>
+            <div class="modal-body">
+                <lb-form ng-if="lbLoadingDone"></lb-form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <!--<button type="button" class="btn btn-primary">Save changes</button>-->
+            </div>
+        </div>
     </div>
-  </div>
 </div>
 
 <hr>
 <button type="button" class="btn btn-warning" ng-click="startLoadBalancer()"><span
-    class="glyphicon glyphicon-play"></span> Start LoadBalancer
+        class="glyphicon glyphicon-play"></span> Start LoadBalancer
 </button>
 <button type="button" class="btn btn-danger" ng-click="removeLoadBalancer()"><span
-    class="glyphicon glyphicon-trash"></span> Delete LB
+        class="glyphicon glyphicon-trash"></span> Delete LB
 </button>
